--- a/views/pictures.ejs
+++ b/views/pictures.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <title>Pictures</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -11,13 +10,15 @@
     />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
     <% pictures.forEach(function(picture){ %>
     <div class="text-center">
       <img class="mb-3" src="/<%=picture%>"/<%=picture%>" style="width:100%">
       <h4><%=picture%></h4>
     </div>
     <% });%>
+    <div class="mb-3">
+      <input class="form-control" type="file" id="formFile" />
+    </div>
+    <script src="../javascripts/pictures.js"></script>
   </body>
 </html>
