--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="../stylesheets/navbar.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -11,6 +12,7 @@
     />
   </head>
   <body>
+    <%- include('./partials/navbar.ejs') %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <% if (locals.isAuthenticated) { %>
