--- a/views/pictures.ejs
+++ b/views/pictures.ejs
@@ -8,14 +8,20 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../stylesheets/navbar.css" />
   </head>
   <body>
-    <% pictures.forEach(function(picture){ %>
+    <%- include('./partials/navbar.ejs') %> <%
+    pictures.forEach(function(picture){ %>
     <div class="text-center">
-      <img class="mb-3" src="/<%=picture%>"/<%=picture%>" style="width:100%">
-      <h4><%=picture%></h4>
+      <img
+        class="mb-3"
+        src="data:image/png;base64,<%= picture.src %>"
+        style="width: 500px"
+      />
+      <h4><%= picture.name %></h4>
     </div>
-    <% });%>
+    <% }); %>
     <div class="mb-3">
       <input class="form-control" type="file" id="formFile" />
     </div>
